objects/ssot__ProcessException__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CaseId__c</fullName>
        <label>Case</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalReference__c</fullName>
        <label>External Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Process Exception Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProcessExceptionCategory__c</fullName>
        <label>Process Exception Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProcessExceptionPriority__c</fullName>
        <label>Process Exception Priority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProcessExceptionSeverityCategory__c</fullName>
        <label>Process Exception Severity Category</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProcessExceptionSeverity__c</fullName>
        <label>Process Exception Severity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProcessExceptionStatusCategory__c</fullName>
        <label>Process Exception Status Category</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProcessExceptionStatusCode__c</fullName>
        <label>Process Exception Status Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProcessExceptionStatus__c</fullName>
        <label>Process Exception Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProcessException_CaseId_map_Case_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProcessException_CaseId_map_Case_Id_N_1</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>ProcessException_CaseId_map_Case_Id_N_1</relationshipLabel>
        <relationshipName>ProcessException_CaseId_map_Case_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderId__c</fullName>
        <label>Sales Order</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761216447_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProcessException_SalesOrderId_map_Sa_rel</label>
        <referenceTo>ssot__SalesOrder__dlm</referenceTo>
        <relationshipLabel>ProcessException_SalesOrderId_map_Sa_rel</relationshipLabel>
        <relationshipName>rel_1697761216447_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>